# monero-gui

./: .dockerignore  .gitignore  .gitmodules  ADDITIONAL_BOUNTIES.md  AGENTS.md  BOUNTY_ACTION_PLAN.md  BUILDING.md  BUILD_ERRORS.md  BUILD_INSTRUCTIONS.md  BUILD_PROGRESS.md  BUILD_SETUP_GUIDE.md  BUILD_TEST_RESULTS.md  BasicPanel.qml  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.bak  DAY1_SUMMARY.md  DEPLOY.md  Dockerfile  Dockerfile.android  Dockerfile.linux  Dockerfile.windows  FINAL_CHECKLIST.md  GUI_I2P_INTEGRATION.md  HASH_UPDATE_GUIDE.md  HOT_RELOAD_DEMO.md  I2P_COMPLETION_SUMMARY.md  I2P_IMPLEMENTATION_NEXT_STEPS.md  I2P_IMPLEMENTATION_SUMMARY.md  I2P_INSTALLATION_GUIDE.md  I2P_INTEGRATION.md  I2P_README.md  I2P_USAGE_EXAMPLES.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LIVE_RELOAD.md  LeftPanel.qml  LeftPanel.qml.patch  Logger.cpp  Logger.h  (+91 more)
components/: AddressBookTable.qml  AdvancedOptionsItem.qml  CMakeLists.txt  CheckBox.qml  CheckBox2.qml  ContextMenu.qml  ContextMenuItem.qml  DaemonConsole.qml  DaemonManagerDialog.qml  DaemonProgress.qml  DashboardTable.qml  DatePicker.qml  DevicePassphraseDialog.qml  Dialog.qml  FontAwesomeButton.qml  HardwareWalletDialog.qml  HistoryTable.qml  HistoryTableInnerColumn.qml  HistoryTableMobile.qml  I2PNodeModal.qml  I2PSettingsDialog.qml  I2PSetupModal.qml  I2pFaqDialog.qml  IconButton.qml  InlineButton.qml  Input.qml  InputDialog.qml  InputMulti.qml  Label.qml  LabelButton.qml  LabelSubheader.qml  LanguageButton.qml  LanguageSidebar.qml  LeftPanel.qml  LineEdit.qml  LineEditMulti.qml  MenuBar.qml  MenuButton.qml  MenuButtonDivider.qml  MobileHeader.qml  (+49 more)
components/effects/: ColorTransition.qml  GradientBackground.qml  ImageMask.qml
js/: TxUtils.js  (+6 more)
src/: CMakeLists.txt  I2PManager.h.save  NetworkType.h  TranslationManager.cpp  TranslationManager.h  main.qml  qml-resources.cmake  version.js.in
src/QR-Code-generator/: BitBuffer.cpp  BitBuffer.hpp  QrCode.cpp  QrCode.hpp  QrSegment.cpp  QrSegment.hpp
src/QR-Code-scanner/: CMakeLists.txt  Decoder.cpp  Decoder.h  QZBarThread.cpp  QZBarThread.h  QrCodeScanner.cpp  QrCodeScanner.h  QrScanThread.cpp  QrScanThread.h
src/daemon/: DaemonManager.cpp  DaemonManager.h  PeersModel.cpp  PeersModel.h
src/i2p/: CMakeLists.txt  I2PDaemon.cpp  I2PDaemon.h  I2PManager.cpp  I2PManager.cpp.backup  I2PManager.h  I2PManager.h.save  I2PNodeManager.cpp  I2PNodeManager.h  I2pBridge.cpp  I2pBridge.h  I2pManager.cpp  I2pManager.h  create_i2p_node.sh  i2pdaemonmanager.cpp  i2pdaemonmanager.h
src/i2pd/: CMakeLists.txt  I2PDManager.cpp  I2PDManager.h
src/libwalletqt/: AddressBook.cpp  AddressBook.h  CMakeLists.txt  I2PNodeManager.cpp  I2PNodeManager.h  Logger.cpp  Logger.h  Memwipe.cpp  Memwipe.h  NetworkType.h  PassphraseHelper.cpp  PassphraseHelper.h  PendingTransaction.cpp  PendingTransaction.h  QRCodeImageProvider.cpp  QRCodeImageProvider.h  Subaddress.cpp  Subaddress.h  SubaddressAccount.cpp  SubaddressAccount.h  TransactionHistory.cpp  TransactionHistory.h  TransactionInfo.cpp  TransactionInfo.h  Transfer.h  UnsignedTransaction.cpp  UnsignedTransaction.h  Wallet.cpp  Wallet.h  WalletListenerImpl.cpp  WalletListenerImpl.h  WalletManager.cpp  WalletManager.h
src/main/: CMakeLists.txt  Logger.cpp  Logger.h  MainApp.cpp  MainApp.h  clipboardAdapter.cpp  clipboardAdapter.h  filter.cpp  filter.h  main.cpp  oscursor.cpp  oscursor.h  oshelper.cpp  oshelper.h
src/model/: AddressBookModel.cpp  AddressBookModel.h  LanguageModel.cpp  LanguageModel.h  MoneroSettings.cpp  MoneroSettings.cpp.patch  MoneroSettings.h  MoneroSettings.h.patch  SubaddressAccountModel.cpp  SubaddressAccountModel.h  SubaddressModel.cpp  SubaddressModel.h  TransactionHistoryModel.cpp  TransactionHistoryModel.h  TransactionHistorySortFilterModel.cpp  TransactionHistorySortFilterModel.h
src/openpgp/: CMakeLists.txt  hash.h  mpi.h  openpgp.cpp  openpgp.h  packet_stream.h  s_expression.h  serialization.h
src/otsur/: CMakeLists.txt
src/p2pool/: P2PoolManager.cpp  P2PoolManager.h  P2PoolStatsProvider.cpp  P2PoolStatsProvider.h
src/prices/: Currency.cpp  Currency.h  CurrencySelectorModel.cpp  CurrencySelectorModel.h  Price.cpp  Price.h  PriceManager.cpp  PriceManager.h  PriceSource.cpp  PriceSource.h  PriceSourceSelectorModel.cpp  PriceSourceSelectorModel.h  qtjsonpath.h
src/qt/: CoroutineTask.h  FutureScheduler.cpp  FutureScheduler.h  I2PDaemonManager.cpp  I2PDaemonManager.h  I2PZero.cpp  I2PZero.h  KeysFiles.cpp  KeysFiles.h  Logger.cpp  MainApp.cpp  MoneroSettings.cpp  MoneroSettings.h  NejcoinSettings.cpp  NejcoinSettings.h  NetworkAccessBlockingFactory.h  PortableSettings.cpp  PortableSettings.h  RpcNode.cpp  RpcNode.h  ScopeGuard.h  TailsOS.cpp  TailsOS.h  TranslationManager.cpp  VirtualBox.cpp  VirtualBox.h  WhonixOS.cpp  WhonixOS.h  clipboardAdapter.cpp  downloader.cpp  downloader.h  filter.cpp  ipc.cpp  ipc.h  macoshelper.h  macoshelper.mm  mime.cpp  mime.h  network.cpp  network.h  (+9 more)
src/tor/: TorManager.cpp  TorManager.h
src/zxcvbn-c/: .gitignore  CMakeLists.txt  README.md  dict-generate.cpp  dict-src.h  makefile  test.c  testcases.txt  words-tv_film.txt  zxcvbn.c  zxcvbn.h
translations/: CMakeLists.txt  README.de.md  monero-core.ts  monero-core_af.ts  monero-core_ar.ts  monero-core_az.ts  monero-core_bg.ts  monero-core_bn.ts  monero-core_br.ts  monero-core_cat.ts  monero-core_cs.ts  monero-core_da.ts  monero-core_de.ts  monero-core_el.ts  monero-core_en.ts  monero-core_eo.ts  monero-core_es.ts  monero-core_fa.ts  monero-core_fi.ts  monero-core_fr.ts  monero-core_ga.ts  monero-core_he.ts  monero-core_hi.ts  monero-core_hr.ts  monero-core_hu.ts  monero-core_id.ts  monero-core_in.ts  monero-core_is.ts  monero-core_it.ts  monero-core_ja.ts  monero-core_kmr.ts  monero-core_ko.ts  monero-core_lt.ts  monero-core_nb.ts  monero-core_nb_NO.ts  monero-core_ne.ts  monero-core_nl.ts  monero-core_pl.ts  monero-core_prt.ts  monero-core_pt-br.ts  (+44 more)
translations/wizard/: WizardConfigure.qml  WizardCreateWallet2.qml  WizardCreateWallet3.qml  WizardDaemonSettings.qml  WizardDonation.qml  WizardFinish.qml  WizardLanguage.qml  WizardMain.qml  (+7 more)
(+2465 files in other folders)
